--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,6 @@
 /*! `Custom` Bootstrap 4 theme */
 
 $headings-font-family:Segoe UI;
-
 $enable-grid-classes:false;
 $primary:#2f3c48;
 $secondary:#6f7f8c;
@@ -18,17 +17,96 @@ $btn-border-radius:0;
  */
 // Add SASS theme customizations here..
 @import "~bootstrap/scss/bootstrap";
-body{
-    background: rgb(236, 236, 236);
-}
+a {
+    color: $primary;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    color: #35e888;
+    text-decoration: none;
+  }
 
-.bg-home{
-    background: url('./assets/images/bg.jpg');
+.easing{
+    transition: ease-in-out 0.3s;
+}
+body {
+    background-color: #f0f0f0;
+    position: relative;
+    
+  }
+  
+  body::before {
+    content: "";
+    position: fixed;    
     background-size: cover;
-    height: calc(100vh - 72px);
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-  filter: grayscale(100%);
-}
-.navbar{
-    padding: 1rem;
-}
+    left: 0;
+    right: 0;
+    top: 0;
+    height: 100vh;
+    z-index: -1;
+  }
+  
+  @media (min-width: 1024px) {
+    body::before {
+      background-attachment: fixed;
+    }
+  }
+#header {
+    transition: ease-in-out 0.3s;
+    position: relative;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    z-index: 997;
+    overflow-y: auto;
+  }
+  
+  #header * {
+    transition: ease-in-out 0.3s;
+  }
+  
+  #header h1 {
+    font-size: 48px;
+    margin: 0;
+    padding: 0;
+    line-height: 1;
+    font-weight: 700;
+    
+  }
+  
+  #header h1 a, #header h1 a:hover {
+    
+    line-height: 1;
+    display: inline-block;
+  }
+  
+  #header h2 {
+    font-size: 24px;
+    margin-top: 20px;
+    
+  }
+  
+  #header h2 span {
+    
+    border-bottom: 2px solid #18d26e;
+    padding-bottom: 6px;
+  }
+
+  @media (max-width: 992px) {
+    #header h1 {
+      font-size: 36px;
+    }
+    #header h2 {
+      font-size: 20px;
+      line-height: 30px;
+    }
+    #header .social-links {
+      margin-top: 15px;
+    }
+    #header .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
