--- a/src/custom.theme.scss
+++ b/src/custom.theme.scss
@@ -12,7 +12,7 @@ a {
     transition: ease-in-out 0.3s;
 }
 body {
-    background-color: #f0f0f0;
+    background-color: #eee;
     position: relative;
     
   }
@@ -60,7 +60,7 @@ body {
   }
   
   #header h1 a, #header h1 a:hover {
-    
+    color: white;
     line-height: 1;
     display: inline-block;
   }
@@ -88,7 +88,7 @@ body {
     #header .social-links {
       margin-top: 15px;
     }
-    #header .container {
+    #header ._container {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -110,7 +110,7 @@ body {
   display: none;
 }
 
-#header.header-top .container {
+#header.header-top ._container {
   display: flex;
   align-items: center;
 }
